# fit-diff

./: .gitignore  README.md  app.py  benchmark_fit_parsers.py  config.yaml  environment.yml  fit_diff.py  git_checkout.sh  pyproject.toml
catalogue_processing/: catalogue_update.py
local_catalogue_processing/: fit_overlap.py  local_catalogue_update.py
s3_catalogue_processing/: fit_files_catalogue.csv  s3_catalogue_update.py  sync_catalogue_to_s3.sh
sandbox/: batch_preprocessing.ipynb  cross_corr.ipynb  parse_eq02.ipynb
shared/: __init__.py
shared/utils/: __init__.py  fit_pairing.py
src/: __init__.py  app.py  app_server.py  app_ui.py  diff_analyzer.py  fit_processor.py  reactives_cloud_storage.py  reactives_data_processing.py  reactives_file_handling.py  reactives_statistics.py  reactives_ui.py  reactives_visualizations.py  utils.py  utils_backup.py
src/utils/: __init__.py  cloud_analysis.py  cloud_cache.py  cloud_manifest.py  cloud_plots.py  data_processing.py  llm_integration.py  statistics.py  visualizations.py
tests/: __init__.py  test_app.py  test_cloud_cache.py  test_cloud_storage.py  test_data_processing.py  test_diff_analyzer.py  test_fit_processor.py  test_funcs.py  test_llm_integration.py  test_local_catalogue_overlap.py  test_s3_catalogue_update.py  test_statistics.py  test_utils.py  test_visualizations.py
tests/fixtures/: README.md  y3wxQOxD_polar.fit  y3wxQOxD_stryd.fit  yMLaJblB_polar.fit  yMLaJblB_stryd.fit
