[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fit-diff"
description = "A Shiny Python app for comparing FIT files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "shiny",
    "pandas",
    "fitparse",
    "numpy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
